# data-miners

./: .flake8  .gitignore  api.py  build.sh  contact_messages.csv  dataset.py  generated_spam.csv  model.pkl  model.py  msg_queue.py  pyproject.toml  render.yaml  research_helper.py  test_model.py  test_msq_queue.py  test_research.py  website.py
.github/workflows/: tests.yaml
static/: messages.css
templates/: contact.html  messages.html  research.html
