[tool.poetry]
name = "data-miners"
version = "0.1.0"
description = ""
authors = ["Lorenzobattistela <lorenzowottrich@gmail.com>"]
readme = "README.md"
packages = [{include = "data_miners"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
flask = "^2.2.3"
jwt = "^1.3.1"
dill = "^0.3.6"
pytest = "^7.2.2"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
